fixed a bug where on mobile it would show large product size icons and fixed image height on orders

--- a/src/Components/cardInfo/cardinfo.css
+++ b/src/Components/cardInfo/cardinfo.css
@@ -120,7 +120,7 @@
     line-height: 20px;
   }
   .size-btn {
-    font-size: 0.7em;
+    font-size: 0.6em;
   }
   .product-price span {
     font-size: 18px;
@@ -130,5 +130,8 @@
   .product-content h1 {
     margin-top: 0;
     font-size: 1.1em;
+  }
+  .product-size {
+    font-size: 0.5em;
   }
 }
