--- a/src/Pages/Orders/Orders.css
+++ b/src/Pages/Orders/Orders.css
@@ -78,6 +78,7 @@
 
   .ui-img img {
     width: 200px;
+    height: 270px;
   }
 
   .Total-price {
